<resources>
    <string name="app_name" translatable="false">FLODA</string>
    <string name="title_activity_floda_main" translatable="false">Floda_main</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Ustawienia konta</string>
    <string name="detail">Statystyka</string>
    <string name="espsett">Ustawienia sondy</string>
    <string name="espdet">Szczegóły urzadzenia</string>
    <string name="dettime">Filtr</string>
    <string name="title_activity_espsettings">Ustawienia sondy</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <!-- Example settings for Data & Sync -->
    <string-array name="wilgotnosc_gleby">
        <item value="0">Wybierz opcje</item>
        <item value="0">#(0j. Suchy czujnik)#</item>
        <item value="0">#(100j. szklanka z woda)#</item>
        <item value="w1">Sucho (poniżej 35j.)</item>
        <item value="w2">Wilgotno (36-60j.)</item>
        <item value="w3">Mokro (61-80j.)</item>
        <item value="w4">Stoi woda (powyżej 80j.)</item>
    </string-array>
    <string-array name="naslonecznienie">
        <item value="0">Wybierz opcje</item>
        <item value="n5">Pełne słonce (6h pełnego słońca)</item>
        <item value="n6">Częściowe słońce/Częściowy cień(3-6h pełnego słońca w dniu)</item>
        <item value="n7">Lekko nasłoneczniony (ambient)</item>
        <item value="n8">Pełny cień (poniżej 3h pełnego słońca w ciągu dnia)</item>
    </string-array>


    <integer-array name="flag">
        <item name="PL" value="@drawable/poland">@drawable/poland</item>
        <item name="UK" value="@drawable/uk">@drawable/uk</item>
        <item name="GER" value="@drawable/germany">@drawable/germany</item>
    </integer-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dod_gat_aktywuj">Aktywować?</string>
    <string name="dodawanie_nowego_gatunku">Dodawanie nowego gatunku</string>
    <string name="nazwa_nowego_gatunku">Nazwa nowego gatunku</string>
    <string name="najlepiej_by_by_a_pisana_aci_skim_odpowiednikiem">Najlepiej by była pisana łacińskim odpowiednikiem</string>
    <string name="co_ile_dni">Co ile dni?</string>
    <string name="powiadom_gdy">Powiadom gdy:</string>
    <string name="liczba_dni">Liczba dni</string>
    <string name="temperatura">Temperatura</string>
    <string name="od">Od:</string>
    <string name="nas_onecznienie">Nasłonecznienie</string>
    <string name="ustawienie_reczne">Ustawienie ręczne</string>
    <string name="predefiniowane_ustawienia">Predefiniowane ustawienia</string>
    <string name="wilgotnosc">Wilgotność</string>
    <string name="_do">Do:</string>
    <string name="link_do_poradnika">Link do poradnika</string>
    <string name="_link" translatable="false">Link</string>
    <string name="dodaj">Dodaj</string>
    <string name="login_in">Logowanie</string>
    <string name="sing_up">Rejestracja</string>
    <string name="dodawanie_nowej_ro_liny">Dodawanie nowej rośliny</string>
    <string name="nazwa">Nazwa</string>
    <string name="nr_sondy">Nr sondy</string>
    <string name="haslo_sondy">Hasło sondy</string>
    <string name="test">TESTUJ</string>
    <string name="dodajros">Dodaj</string>
    <string name="wybierz_gatunek_z_listy">Wybierz gatunek z listy</string>
    <string name="dodaj_nowy_gatunek">Dodaj nowy gatunek</string>
    <string name="wybierz_gatunek">Wybierz gatunek</string>
    <string name="szukaj">Szukaj</string>
    <string name="nawodnienie">Nawodnienie</string>
    <string name="naslonecznienie">Nasłonecznienie</string>
    <string name="dodaj_nowa_sonde">Dodaj nowa sonde</string>
    <string name="akceptuj">Akceptuj</string>
    <string name="anuluj">Anuluj</string>
    <string name="nie">Nie</string>
    <string name="tak">Tak</string>
    <string name="jestes_pewny">Jesteś pewny?</string>
    <string name="aktywacja_filtru_czasu">Aktywacja filtru czasu</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Hasło</string>
    <string name="login_za">Zaloguj</string>
    <string name="nick" translatable="false">Nick</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="repeat_your_password">Powtórz swoje hasło</string>
    <string name="do_you_agree_with_our_privacy_policy">Czy zgadzasz się z polityką prywatności?</string>
    <string name="send_your_request">WYŚLIJ ZGŁOSZENIE</string>
    <string name="usu_ta_ro_lin">Usuń ta roślinę</string>
    <string name="poradnik">Poradnik</string>
    <string name="list_of_yours_plant">Lista twoich roślin</string>
    <string name="faq">WWW projektu</string>
    <string name="forum" translatable="false">Forum</string>
    <string name="flodapedia">FLODApedia</string>
    <string name="project_member_list">Lista osób w projekcie</string>
    <string name="other_windows">Pozostałe okna</string>
    <string name="log_out">Wyloguj</string>
    <string name="dodatkowe_info">Dodatkowe informacje:</string>
    <string name="add_new_gen_pusta">Nazwa nie może byc pusta!</string>
    <string name="add_new_gen_ok">Utworzono nowy gatunek</string>
    <string name="add_new_gen_del_problem">Usunięto http:// lub nic nie zostalo dopisane</string>
    <string name="add_new_gen_wilg_err">Nieprawidłowa wartość wpisana w wilgotnosci</string>
    <string name="add_new_gen_temp_error">Nieprawidłowa wartość wpisana w temperaturze</string>
    <string name="add_new_gen_rules_err">Nie ustalono w nasłonecznieniu zasad</string>
    <string name="add_new_gen_list_error">Nie wybraleś pozycji z listy rozwijanej nasłonecznienia</string>
    <string name="add_new_gen_sun_error">Nieprawidłowa wartość wpisana w nasloneczneniu</string>
    <string name="add_new_gen_water_error">Nie ustalono zasad w podlewaniu</string>
    <string name="add_new_gen_list_water_error">Nie wybraleś pozycji z rozwijanej listy podlewania</string>
    <string name="add_new_gen_day_empty">Pusta ilość dni w podlewaniu!</string>
    <string name="Ok" translatable="false">Ok!</string>
    <string name="bad_data">Złe dane</string>
    <string name="empty_field">Puste pole</string>
    <string name="add_plant_set_1">Założono nowa rosline o nazwie</string>
    <string name="add_plant_set_0">Błąd z wysyłaniem</string>
    <string name="out_off_data">Brakuje danych!</string>
    <string name="epmty_field">Pole nie może być puste</string>
    <string name="choosen_genre">Wybrano gatunek o numerze:</string>
    <string name="genre_list">Lista gatunków</string>
    <string name="no_set">Brak ustaleń</string>
    <string name="days">" dni"</string>
    <string name="success">Sukces!</string>
    <string name="superr" translatable="false">Super!</string>
    <string name="no_guide">Brak poradnika</string>
    <string name="pole_zakres">Puste pole zakresowe</string>
    <string name="config_deleted">Konfiguracja usunieta</string>
    <string name="Fata_error">Wystąpił błąd</string>
    <string name="plant_water">Rośline należy już podlać!</string>
    <string name="water_tomoro">Rośline należy podlać jutro!</string>
    <string name="for_water_0">"Rośline należy podlać za "</string>
    <string name="for_water_1">dni</string>
    <string name="potrz_podl">Granica suchości podłoża</string>
    <string name="units">" j."</string>
    <string name="max_slon">Max. nasłonecznienie</string>
    <string name="min_slon">Min. nasłonecznienie</string>
    <string name="max_temp">Max. temperatura</string>
    <string name="min_temp">Min. temperatura</string>
    <string name="max_wilg">Max. wilgotnosc</string>
    <string name="min_wilg">Min. wilgotnosc</string>
    <string name="login_failed">Logowanie nie powiodło się</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="incorrect_mail">To nie jest poprawny email!</string>
    <string name="haslo_takie_same">Hasła muszą być takie same</string>
    <string name="polityka_pryw">Akceptuj polityke prywatności</string>
    <string name="luxi">" lux/dzien"</string>
    <string name="coi">"Co "</string>
    <string name="angielski">Angielski</string>
    <string name="niemiecki">Niemiecki</string>
    <string name="chose_lang">Wybierz język</string>
    <string name="zmie_j_zyk">Zmień język</string>
    <string name="zmie_has_o">Zmień hasło</string>
    <string name="add_facebook">Dodaj Facebooka</string>
    <string name="polacz">Połącz</string>
    <string name="mail_sended">Link aktywacyjny został wysłany na maila!</string>

    <string name="floda__notification_title_template">Jedna z sond wymaga twojej uwagi</string>

    <!-- TODO: remove this placeholder text -->
    <string name="floda__notification_placeholder_text_template">Sprawdz stan urzadzenia</string>
    <string name="sonda_addition_text" translatable="false">Co należy na początku zrobić? \n
        1. Podłącz swoją sonde do źródła zasilania. \n
        2. Połącz się z siecią Wi-Fi hostowaną przez sonde, jest to \'Floda eg.\' i twój numer urządzenia. \n
        3. Następnie kliknij przycisk odswież. \n
        4. Podłącz swoja sieć Wi-Fi do urzadzenia. \n
        5. Gotowe!</string>
    <string name="pierwsze_kroki" translatable="false">Pierwsze kroki</string>
    <string name="odswiez">odśwież</string>
    <string name="polski">Polski</string>
    <string name="okres_pomiar_w_w_minutach">Okres pomiarów (w minutach)</string>
    <string name="has_o_do_sondy">Hasło do SONDY</string>
    <string name="nowe_has_o_puste_stare">Nowe hasło (puste stare)</string>
    <string name="zatwierd">ZATWIERDŹ</string>
    <string name="sonda_info" translatable="false">SONDA info</string>
    <string name="wilg_ok">Wczorajsza wilgotność była odpowiednia</string>
    <string name="wilg_ma">Wczorajsza wilgotność była zbyt mała</string>
    <string name="wilg_du">Wczorajsza wilgotność była zbyt duża</string>
    <string name="temp_ok">Wczorajsza temperatura była odpowiednia</string>
    <string name="temp_min">Wczorajsza temperatura była zbyt mała</string>
    <string name="temp_du">Wczorajsza temperatura była zbyt duża</string>
    <string name="sun_ok">Wczorajsze nasłonecznienie było odpowiednie</string>
    <string name="sun_ma">Wczorajsze nasłonecznienie było zbyt małe</string>
    <string name="sun_du">Wczorajsze nasłonecznienie było zbyt duże</string>
    <string name="brak">brak</string>
    <string name="zapostowano">Zapostowano</string>
    <string name="opis_brak">Brakuje opisu lub tytułu</string>
    <string name="konfiguracja_sondy">Konfiguracja SONDY</string>
    <string name="processing">Serwer przetwarza twoje zapytanie</string>
    <string name="add_new_post">Dodaj nowy post</string>
    <string name="title">Tytuł</string>
    <string name="category">Kategoria</string>
    <string name="description">Opis</string>
    <string name="sonda_settings">SONDA ustawienia</string>
    <string name="period">OKRES czasu:</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="type_there_your_comment">Tutaj wpisz swój kometarz</string>
    <string name="add">DODAJ</string>
    <string name="cancel">Anuluj</string>
    <string name="every">"Co "</string>
    <string name="minutes">" minut"</string>
    <string name="saving_in_progres">Zapisywanie w toku...</string>
    <string name="twoje_urz_dzenie_nie_wykazuje_aktywnosci">Twoje urządzenie nie wykazuje aktywnosci</string>

</resources>
