<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/det_time"
        android:orderInCategory="100"
        android:title="@string/dettime"
        app:showAsAction="never" />
    <item
        android:id="@+id/poradnik"
        android:orderInCategory="100"
        android:title="@string/poradnik"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ssettings"
        android:orderInCategory="100"
        android:title="@string/detail"
        app:showAsAction="never" />
    <item
        android:id="@+id/espsettings"
        android:orderInCategory="100"
        android:title="@string/espsett"
        app:showAsAction="never" />
    <item
        android:id="@+id/espdet"
        android:orderInCategory="100"
        android:title="@string/espdet"
        app:showAsAction="never" />
    <item
        android:id="@+id/del_plant_butt"
        android:orderInCategory="100"
        android:title="@string/usu_ta_ro_lin"
        app:showAsAction="never" />


</menu>
