<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_ssettings"
        android:orderInCategory="100"
        android:title="Wszystkie pomiary"
        app:showAsAction="never" />
    <item
        android:id="@+id/espsettings"
        android:orderInCategory="100"
        android:title="@string/espsett"
        app:showAsAction="never" />
    <item
        android:id="@+id/espdet"
        android:orderInCategory="100"
        android:title="@string/espdet"
        app:showAsAction="never" />
    <item
        android:id="@+id/time"
        android:orderInCategory="100"
        android:title="@string/dettime"
        app:showAsAction="never" />
    <item
        android:id="@+id/poradnik"
        android:orderInCategory="100"
        android:title="Poradnik"
        app:showAsAction="never" />
</menu>
