<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/login"
        android:inputType="text"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/login_edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/password"
        android:textColor="@android:color/background_light"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1.0">


        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/anuluj"
            android:textColor="@android:color/background_light"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/login_za"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>