<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/molengo"
        android:textColor="@android:color/white"

        android:text="@string/sonda_settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/indicatorSeekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:isb_indicator_color="@color/colorPrimaryDark"
        app:isb_indicator_text_color="#fff"
        app:isb_indicator_text_size="18sp"
        app:isb_max="1440"
        app:isb_min="10"
        app:isb_only_thumb_draggable="false"
        app:isb_progress="25"
        app:isb_seek_smoothly="true"
        app:isb_show_indicator="rounded_rectangle"
        app:isb_show_tick_marks_type="oval"
        app:isb_show_tick_texts="true"
        app:isb_thumb_color="@color/colorPrimaryDark"
        app:isb_thumb_size="20dp"
        app:isb_tick_marks_drawable="@drawable/speed"
        app:isb_tick_marks_size="13dp"
        app:isb_tick_texts_color="#ffff"
        app:isb_tick_texts_size="15sp"
        app:isb_track_background_size="2dp"
        app:isb_track_progress_color="@color/colorAccent"
        app:isb_track_progress_size="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/molengo"
        android:text="@string/okres_pomiar_w_w_minutach"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/indicatorSeekBar2"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/molengo"
        android:text="@string/has_o_do_sondy"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/indicatorSeekBar2" />

    <EditText
        android:id="@+id/edithaslo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"

        android:fontFamily="@font/molengo"
        android:hint="@string/nowe_has_o_puste_stare"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/indicatorSeekBar2"
        app:layout_constraintStart_toStartOf="@+id/indicatorSeekBar2"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/editakceptuj"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/molengo"
        android:text="@string/zatwierd"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edithaslo"
        app:layout_constraintTop_toBottomOf="@+id/edithaslo" />

    <Button
        android:id="@+id/editanuluj"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/molengo"
        android:text="@string/anuluj"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edithaslo"
        app:layout_constraintTop_toBottomOf="@+id/edithaslo" />
</androidx.constraintlayout.widget.ConstraintLayout>